[package]
name = "app"
version = "0.1.3"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [ ] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.2.3", features = [ "shell-open", "updater" ] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/tauri-plugin-log", branch = "dev", features = [ "colored" ] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/tauri-plugin-store", branch = "dev" }
log = "0.4.17"
env_logger = "0.10.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
